<resources>
    <string name="app_name">UserAuthentication</string>
    <string name="full_name">Full Name</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="login_with_google_button">Login with Google</string>
    <string name="newUserInfo">If you are a new user Click</string>
    <string name="welcome">Welcome!</string>
</resources>